--- a/src/styles/doc.scss
+++ b/src/styles/doc.scss
@@ -128,3 +128,7 @@ code {
 .swatch.contrast_text > * {
     color: #444;
 }
+
+ul.dpl-only li {
+    margin-top: 10px;
+}
